# shreds-subscribe

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
src/: deshred.rs  main.rs  rpc.rs  shred.rs  websocket.rs
tests/: e2e_send_self.rs
