[package]
name = "shreds-subcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros", "fs","net"] }
anyhow = "1.0.98"
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery", package = "solana-ledger" }
solana-streamer = "3.0.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono"] }
tracing = "0.1.41"
ahash = "0.8.12"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-entry = "3.0.0"
itertools = "0.14.0"
bincode = "1.3"
crossbeam-channel = "0.5.15"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
dotenvy = "0.15"
solana-client = "3.0.0"
ureq = { version = "3.1.2", features = ["json"] }
anyhow = "1.0"
